# coughoverflow

./: .gitignore  AI.md  Dockerfile  Dockerfile.worker  README.md  local.sh  main.tf  pyproject.toml  run.py  worker.py
.github/workflows/: classroom.yml
api/: __init__.py
api/models/: apidbs.py
api/views/: routes.py
